# cppwebsocket

./: .gitignore  CMakeLists.txt  README.md  intrucciones.md
flask/: app.py
include/: dequesafe.h  process.h  websocket.h  wsdata.h
src/: dequesafe.cpp  main.cpp  process.cpp  websocket.cpp  wsdata.cpp
